force-app/main/default/objects/Product2/fields/Netsuite_Id__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Id__c</fullName>
    <description>Netsuite_Id__c</description>
    <label>Netsuite ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>