force-app/main/default/objects/Product2/fields/Toggle_Sync_to_NS__c.field-meta.xml
<CustomField>
    <fullName>Toggle_Sync_to_NS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Toggle Sync to NS</label>
    <type>Checkbox</type>
</CustomField>